--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -73,14 +73,9 @@ map:
 
     - id: epaROD
       type: cartodb
-      username: smartercleanup
-      cssId: eparodcss
-      table: eparodmergedfinal
-      url: "https://smartercleanup.cartodb.com/api/v2/viz/7a253d2e-bb20-11e5-91b9-0ecfd53eb7d3/viz.json"
-      css: "#eparodmergedfinal{polygon-opacity:0.7;}#eparodmergedfinal[alt5btecha=1]{polygon-fill:#ff9900;}#eparodmergedfinal[alt5btecha=2]{polygon-fill:#ff9900;line-color:#000;line-width:1;}#eparodmergedfinal[alt5btecha=3]{polygon-fill:#EDE4AE;}#eparodmergedfinal[alt5btecha=4]{polygon-fill:#006600;}#eparodmergedfinal[alt5btecha=5]{polygon-fill:#4567F1;}#eparodmergedfinal[alt5btecha=6]{polygon-fill:#000;}#eparodmergedfinal[alt5btecha=7]{polygon-fill:#000;}#eparodmergedfinal[alt5btecha=8]{polygon-fill:#66ffff;}"
+      url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
       legend: true
-      description-image: /static/css/images/legend-EPA-ROD.png
-      description-image-alt: 'legend'
+      description: _(The EPA-approved cleanup plan for the river)
       title: _(River cleanup plan)
       visibleDefault: false
 
