--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -619,7 +619,7 @@ place:
           prompt: _(Pollution description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -637,7 +637,7 @@ place:
           prompt: _(Land use description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -655,7 +655,7 @@ place:
           prompt: _(Air quality title)
           placeholder: _(Enter title)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -673,7 +673,7 @@ place:
           prompt: _(Dog watch description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
