--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -557,7 +557,7 @@ place:
           prompt: _(Pollution description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -575,7 +575,7 @@ place:
           prompt: _(Land use description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -593,7 +593,7 @@ place:
           prompt: _(Air quality title)
           placeholder: _(Enter title)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -611,7 +611,7 @@ place:
           prompt: _(Dog watch description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
