--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -603,7 +603,7 @@ place:
           prompt: _(Pollution description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -621,7 +621,7 @@ place:
           prompt: _(Land use description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -639,7 +639,7 @@ place:
           prompt: _(Air quality title)
           placeholder: _(Enter title)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
@@ -657,7 +657,7 @@ place:
           prompt: _(Dog watch description)
           placeholder: _(Description...)
           optional: false
-        - name: name
+        - name: submitter_name
           type: text
           prompt: _(Your name)
           placeholder: _(Name)
