add more fr orm fields

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -601,8 +601,8 @@ place:
 
   #### begin dynamic form config ####
   #
+  #TODO: add checkbox functionality
   #TODO: maybe add an autocomplete
-  #TODO: DRY up this section
   categories:
     observation:
       name: location_type
@@ -700,6 +700,27 @@ place:
           prompt: _(Your name)
           placeholder: _(Name)
           optional: true
+        - name: private-submitter_email
+          type: text
+          prompt: _(Your Email)
+          optional: true
+          sticky: true
+          attrs:
+            - key: placeholder
+              value: _(Receive email updates on your report)
+            - key: size
+              value: 30
+        - name: my_image
+          type: file
+          prompt: _(Image)
+          inputfile_label: _(Add an Image)
+          optional: true
+          attrs:
+            - key: accept
+              value: image/*
+        - type: submit
+          label: _(Put it on the map!)
+
 
   # define shared form element content here
   dynamic_form_content:
