update default lat/long/zoom for first run

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -77,7 +77,7 @@ map:
       legend: true
       description: _(The EPA-approved cleanup plan for the river)
       title: _(River cleanup plan)
-      visibleDefault: false
+      visibleDefault: true
 
       # WMS landuse
     - id: landuse
