--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -53,7 +53,7 @@ map:
 
   # Legend Layers
 
-    - id: areasOfConcern
+    - id: restoration
       url: https://t9t3m4dora.execute-api.us-west-2.amazonaws.com/development/mapbox/restoration-sites
       type: landmark
       legend: true
@@ -62,7 +62,7 @@ map:
       placeType: mapbox
       description: _(Habitat restoration and community organizing)
 
-    - id: communityAction
+    - id: vision
       url: https://t9t3m4dora.execute-api.us-west-2.amazonaws.com/development/mapbox/community-action
       type: landmark
       legend: true
@@ -71,7 +71,7 @@ map:
       placeType: mapbox
       description: _(Priority areas identified through community visioning projects)
 
-    - id: epaROD
+    - id: cleanup
       type: cartodb
       url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
       legend: true
@@ -106,7 +106,7 @@ map:
       visibleDefault: false
 
       # WMS NLCD
-    - id: nlcd
+    - id: landcoverage
       url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/wms
       layers: 'wria9:nlcd2011'
       version: '1.1.0'
@@ -120,7 +120,7 @@ map:
       visibleDefault: false
 
       # WMS Original Flow
-    - id: duwamish-original
+    - id: original-river
       url: https://smartercleanup.cartodb.com/api/v2/viz/965480e8-c031-11e5-a22c-0ecd1babdde5/viz.json
       type: cartodb
       legend: true
